# compsys.732

./: .gitignore  Readme.md
Aligner/: CMakeLists.txt
Aligner/Aligner/: CMakeLists.txt  Engine.cpp  Engine.h  Source.cpp
Aligner/AlignerLib/: CMakeLists.txt  Calibration.h  ColorMatcher.cpp  ColorMatcher.h  HelperUtils.cpp  HelperUtils.h  ICPEngine.cpp  ICPEngine.h  LoadUtils.cpp  LoadUtils.h  MaskDepthFrame.h
Aligner/AlignerTests/: CMakeLists.txt
Aligner/AlignerTests/Tests/: Example_Tests.cpp
Aligner/Archive/: PoseMatchProblem.cpp  PoseMatchProblem.h
Aligner/GeneratorFiles/: Calibration.xml  ColorMatcher.xml  HelperUtils.xml  ICPEngine.xml  LoadUtils.xml  MaskDepthFrame.xml  PoseMatchProblem.xml
Aligner/Resources/: config.xml
Aruco/: ArgReader.h  CMakeLists.txt  Source.cpp
Aruco/Data/: calibration.xml
FTracker/: CMakeLists.txt  Source.cpp
FTracker/Output/: Readme.md
PlaneAlign/: ArgReader.h  CMakeLists.txt  Source.cpp
PlaneAlign/Data/: calibration.xml
